# CMakeList.txt : projet CMake pour TestPybind, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("TestPybind")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (TestPybind "TestPybind.cpp" "TestPybind.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
